# documento

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/documento/: __init__.py  openapi.py  server.py
src/documento/themes/rapidoc/: index.html
src/documento/themes/redoc/: index.html
src/documento/themes/scalar/: index.html
src/documento/themes/swagger/: index.html
src/themes/swagger/: index.html
src/website/redoc/: index.html
