[project]
name = "documento"
version = "0.1.0"
description = "Generate documentation for backo"
readme = "README.md"
authors = [
    { name = "Théo BL", email = "theo.biasutto-lervat@inria.fr" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
documento = "documento:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
