[project]
name = "documento"
version = "0.1.1"
description = "Display documentation for backo"
authors = [{ name = "Théo BL", email = "theo.biasutto-lervat@inria.fr" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
documento = "documento:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
